--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@
                                 <div  class="control ">
                                     <div class="select is-link">
                                         <select x-model="newItem.chanel" @change="changeChanel()">
-                                            <option value=1 >1</option>
-                                            <option value=2 >2</option>
-                                            <option value=3 >3</option>
+                                            <option value='1' >1</option>
+                                            <option value='2' >2</option>
+                                            <option value='3' >3</option>
                                         </select>
                                     </div>
                                 </div>
