--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
                                                 <option value="admin" > Admin </option>
                                                 <!-- <option value="gadenfc"> Gaden FC </option> -->
                                                 <option value="superadmin"> Super Admin </option>
+                                                <option value="tps"> tps </option>
                                             </select>
                                         </div>
                                         <span class="icon is-left">
