--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ndrt_PRJCT</title>
+    <title>.rndm</title>
     <link rel="icon" href="public/img/logo_p2g.png" type="image/png">
 
     <!-- fire base -->
@@ -937,8 +937,11 @@
 
                                 <div class="field">
                                     <div class="control is-expanded">
-                                        <input class="input is-uppercase" type="text" placeholder="Alamat" required
-                                        x-model="item.alamat" >
+                                        <!-- <input class="input is-uppercase" type="text" placeholder="Alamat" required
+                                        x-model="item.alamat" > -->
+
+                                        <textarea class="textarea is-uppercase" placeholder="Alamat" rows="2" required
+                                        x-model="item.alamat" > </textarea>
                                     </div>
                                 </div>
 
