--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 <section class="alert-message is-fullwidth" >
                     <div class="notification" :class="`${$store.message.type}`">
                         <button class="delete" @click="$store.message.class = false"></button>
-                        <strong x-text="$store.message.text" > ---------------- </strong>
+                        <strong x-text="$store.message.text" > </strong>
                     </div>
                 </section>
             </div>
