- fix (light theme only)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
     
     <!-- bulma css & font awesome -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/versions/bulma-no-dark-mode.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <!-- custom css -->
@@ -345,7 +345,7 @@
                     </div>
             
                     <!-- saldo akhir -->
-                    <div class="column is-full-mobile p-0 ">
+                    <div class="column is-full-mobile p-2 ">
                         <div class="card has-background-link-light is-size-3 p-3 has-text-weight-semibold is-flex is-justify-content-space-between">
                             <span >SALDO :</span>
                             <span x-text="viewRupiah((totalBeforeFilter + totalDebit) - totalKredit)" >
