--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -180,7 +180,7 @@
     <section class="section p-1">
         <div class="container ">
             <!-- table header config -->
-            <div class="card has-background-link-light is-shadowless has-text-right p-1 mb-3"
+            <div class="card has-background-link-light is-shadowless has-text-right p-1 mb-3 "
             x-show="dataPemilih.length > 0" x-transition >
                 <label class="checkbox mr-1">
                     <input x-model="tableHeader[3]" :change="!tableHeader[3]" type="checkbox" />
@@ -227,7 +227,7 @@
                             </button>
                         </p> -->
                         <p class="control">
-                            <button class="button is-link" @click="openForm('form')" >
+                            <button class="button is-link" @click="openForm('form'); $nextTick(() => $refs.inputFilter.focus())" >
                                 <span class="icon"><i class="fas fa-plus"></i></span>
                             </button>
                         </p>
@@ -326,8 +326,8 @@
                             <div class="column is-full">
                                 <div class="field has-addons">
                                     <div class="control is-expanded">
-                                        <input class="input" type="text" placeholder="Nama / No.Urut" inputmode="numeric" pattern="[0-9]*"
-                                        x-model="newSearch.query" >
+                                        <input class="input" type="text" placeholder="Nama / No.Urut" inputmode="numeric" pattern="[0-9]*" 
+                                        x-model="newSearch.query" @keyup.enter="cariBelumDaftar()" x-ref="inputFilter" >
                                     </div>
                                     <p class="control">
                                         <button class="button is-link" @click="cariBelumDaftar()" >
@@ -565,21 +565,21 @@
                 </div>
 
                 <!-- daftar hadir -->
-                <div class="column is-full p-0" >
+                <div class="column is-full p-0 " >
                     <div class="table-container">
                         <div class="is-flex is-align-items-start is-justify-content-space-between">
                             <p class="is-uppercase is-size-6 mb-3 has-text-weight-semibold" > Daftar Hadir </p>
 
-                            <p class="is-align-items-start" >
-                                <label class="checkbox is-align-content-center">
+                            <div class="card has-background-link-light is-shadowless px-2" >
+                                <label class="checkbox is-align-content-center has-text-weight-semibold">
                                     <input type="checkbox" x-model="f_l" @click="f_l = !f_l; f_p = false" />
                                     L
                                 </label>
-                                <label class="checkbox is-align-content-center ml-2">
+                                <label class="checkbox is-align-content-center has-text-weight-semibold ml-2">
                                     <input type="checkbox" x-model="f_p" @click="f_p = !f_p; f_l = false" />
                                     P
                                 </label>
-                            </p>
+                            </div>
                         </div>
 
                         <table class="table is-narrow is-hoverable is-bordered is-fullwidth mb-0"
